--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "social-network",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^5.8.1"
+    "express": "^4.17.1",
+    "mongoose": "^7.0.2"
   }
 }
